# EasyNet

./: .gitignore  MUSTREAD.md  README.md  build.ps1  build.sh  everyone.sh  package.json
src/: i18n.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
